fixed spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.container {
+body {
   padding: 5%;
 }
 
@@ -22,7 +22,6 @@
   visibility: visible;
   opacity: 1;
   transition: visibility 500ms ease-in 0, opacity 300ms;
-  transform: translateY(-50px);
 }
 
 .hide {
